# aes_sca_comparison

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
simple/: subbyte_demo.py
src/aes_eval/: __init__.py  cli.py  cycle_models.py  golden.py  interfaces.py  metrics.py  randomness.py  reporting.py
src/aes_eval/implementations/: __init__.py  masked_dom_skeleton.py  masked_ti_skeleton.py  unmasked_baseline.py
src/aes_explore/: __init__.py  aes_core.py  cli.py  counters.py  reference.py  round_didactic.py  trace.py  utils.py
src/aes_explore/dom/: __init__.py  dom_gadgets.py  gf_canright.py  sbox_canright_dom.py
src/aes_explore/models/: __init__.py  model_dom.py  model_unprotected_ht.py
tests/: __init__.py  test_cycle_scaling.py  test_golden.py  test_implementations.py  test_randomized_vs_library.py  test_randomness_scaling.py  test_round_mode.py  test_vectors.py  test_verbose_trace.py
