[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aes-explore"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["src"]
